--- a/index.html
+++ b/index.html
@@ -12,25 +12,7 @@
       <div class="container header-inner">
         <button id="hamburger" class="hamburger" aria-label="Abrir menú">☰</button>
         <a href="index.html" class="logo" style="text-decoration:none;cursor:pointer;display:flex;align-items:center;gap:10px">
-          <svg width="32" height="32" viewBox="0 0 32 32" style="flex-shrink:0;filter:drop-shadow(0 2px 4px rgba(0,0,0,0.1))">
-            <defs>
-              <linearGradient id="giftGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                <stop offset="0%" style="stop-color:#ff6b9d;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#d946a6;stop-opacity:1" />
-              </linearGradient>
-              <linearGradient id="ribbonGradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                <stop offset="0%" style="stop-color:#ffd700;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#ffed4e;stop-opacity:1" />
-              </linearGradient>
-            </defs>
-            <rect x="4" y="10" width="24" height="16" rx="2" fill="url(#giftGradient)" />
-            <path d="M 4 10 Q 16 4 28 10" fill="#ff8ab3" />
-            <rect x="14" y="4" width="4" height="22" fill="url(#ribbonGradient)" />
-            <rect x="4" y="14" width="24" height="3" fill="url(#ribbonGradient)" />
-            <circle cx="16" cy="8" r="3" fill="#ffd700" />
-            <ellipse cx="8" cy="14" rx="2" ry="3" fill="rgba(255,255,255,0.4)" />
-          </svg>
-          <span style="font-size:1.3rem;font-weight:700;color:white">Sophie</span>
+          <span style="font-family:'Daily',Playfair Display,serif;font-size:2.5rem;font-weight:400;color:#2c4a8c">SophieWeb</span>
         </a>
         <button id="account-btn" class="account" type="button" aria-label="Abrir cuenta">👤 Iniciar sesión</button>
         <div id="account-menu" class="account-menu hidden" aria-hidden="true">
@@ -61,7 +43,6 @@
             <li><a class="btn" href="products.html?cat=bloques">Bloques</a></li>
           </ul>
           <a class="btn" id="drawer-account" href="user-login.html" style="border-top:1px solid rgba(230,200,215,0.4);padding-top:12px;color:#6b2840;font-weight:700">👤 Iniciar sesión</a>
-          <a class="btn" href="login.html" style="margin-top:auto;border-top:1px solid rgba(230,200,215,0.4);padding-top:12px;color:#d946a6;font-weight:700">⚙️ Administración</a>
         </nav>
       </div>
     </aside>
