--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
 
         .profile-header h1 {
             font-family: Playfair Display, serif;
-            color: #5a2032;
+            color: #2D4A9C;
             font-size: 2.8rem;
             margin: 0 0 10px 0;
             font-weight: 700;
@@ -48,7 +48,7 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            color: #d946a6;
+            color: #C7499F;
             text-decoration: none;
             font-weight: 700;
             margin-bottom: 30px;
@@ -95,7 +95,7 @@
         }
 
         .profile-section h2 {
-            color: #5a2032;
+            color: #2D4A9C;
             font-size: 1.5rem;
             margin: 0 0 25px 0;
             padding-bottom: 15px;
@@ -111,7 +111,7 @@
             display: inline-block;
             width: 6px;
             height: 6px;
-            background: linear-gradient(135deg, #ff6b9d, #d946a6);
+            background: linear-gradient(135deg, #C7499F, #923DAA);
             border-radius: 50%;
         }
 
@@ -126,7 +126,7 @@
             padding: 18px;
             background: linear-gradient(135deg, #f8f5f7 0%, #faf8fb 100%);
             border-radius: 14px;
-            border-left: 4px solid #d946a6;
+            border-left: 4px solid #C7499F;
             transition: all 0.3s;
         }
 
@@ -180,7 +180,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #5a8dee, #3a70d6);
+            background: linear-gradient(135deg, #50BFE6, #2D4A9C);
             color: white;
             border: none;
             padding: 14px 28px;
@@ -197,13 +197,13 @@
 
         .btn-primary:hover {
             transform: translateY(-3px);
-            box-shadow: 0 12px 32px rgba(74, 144, 226, 0.35);
+            box-shadow: 0 12px 32px rgba(80, 191, 230, 0.35);
         }
 
         .btn-secondary {
-            background: #f3e5f5;
-            color: #5a2032;
-            border: 2px solid #d946a6;
+            background: #F5E6F0;
+            color: #2D4A9C;
+            border: 2px solid #C7499F;
             padding: 14px 28px;
             border-radius: 12px;
             font-weight: 700;
@@ -310,7 +310,7 @@
         .edit-input {
             width: 100%;
             padding: 12px 14px;
-            border: 2px solid #d946a6;
+            border: 2px solid #C7499F;
             border-radius: 10px;
             font-family: Montserrat, sans-serif;
             font-size: 1rem;
@@ -527,8 +527,8 @@ function showPurchaseHistory() {
     modal.id = 'purchase-history-modal';
     modal.style.cssText = 'position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.7);z-index:2000;display:flex;align-items:center;justify-content:center;';
     let content = `<div style="background:white;padding:30px;border-radius:16px;max-width:700px;width:96vw;max-height:90vh;overflow-y:auto;box-shadow:0 4px 20px rgba(0,0,0,0.18);">
-        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:18px;border-bottom:2px solid #d946a6;padding-bottom:12px;">
-            <h2 style="margin:0;color:#d946a6;font-size:1.5rem;">🧾 Historial de Compras</h2>
+        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:18px;border-bottom:2px solid #C7499F;padding-bottom:12px;">
+            <h2 style="margin:0;color:#C7499F;font-size:1.5rem;">🧾 Historial de Compras</h2>
             <button onclick="document.getElementById('purchase-history-modal').remove()" style="background:none;border:none;font-size:1.5rem;cursor:pointer;color:#666">✕</button>
         </div>`;
     if (userInvoices.length === 0) {
@@ -539,10 +539,10 @@ function showPurchaseHistory() {
         userInvoices.forEach(inv => {
             const date = new Date(inv.date).toLocaleString('es-CR');
             const total = inv.subtotal ? `₡${inv.subtotal.toLocaleString()}` : '';
-            content += `<div style='border:1px solid #e3cfe0;border-radius:10px;padding:16px;background:#faf8fb;'>
+            content += `<div style='border:1px solid #E8F3F8;border-radius:10px;padding:16px;background:#F9FBFD;'>
                 <div style='display:flex;justify-content:space-between;align-items:center;'>
-                    <div><strong style='color:#5a2032'>${inv.id || 'Factura'}</strong></div>
-                    <div style='color:#d946a6;font-weight:700'>${total}</div>
+                    <div><strong style='color:#2D4A9C'>${inv.id || 'Factura'}</strong></div>
+                    <div style='color:#C7499F;font-weight:700'>${total}</div>
                 </div>
                 <div style='color:#666;font-size:0.95rem;margin:6px 0 0 0;'>${date}</div>
                 <div style='margin-top:10px;'>
@@ -694,8 +694,8 @@ function showPurchaseHistory() {
             modal.id = 'purchase-history-modal';
             modal.style.cssText = 'position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.7);z-index:2000;display:flex;align-items:center;justify-content:center;';
             let content = `<div style="background:white;padding:30px;border-radius:16px;max-width:700px;width:96vw;max-height:90vh;overflow-y:auto;box-shadow:0 4px 20px rgba(0,0,0,0.18);">
-                <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:18px;border-bottom:2px solid #d946a6;padding-bottom:12px;">
-                    <h2 style="margin:0;color:#d946a6;font-size:1.5rem;">🧾 Historial de Compras</h2>
+                <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:18px;border-bottom:2px solid #C7499F;padding-bottom:12px;">
+                    <h2 style="margin:0;color:#C7499F;font-size:1.5rem;">🧾 Historial de Compras</h2>
                     <button onclick="document.getElementById('purchase-history-modal').remove()" style="background:none;border:none;font-size:1.5rem;cursor:pointer;color:#666">✕</button>
                 </div>`;
             if (userInvoices.length === 0) {
@@ -706,10 +706,10 @@ function showPurchaseHistory() {
                 userInvoices.forEach(inv => {
                     const date = new Date(inv.date).toLocaleString('es-CR');
                     const total = inv.subtotal ? `₡${inv.subtotal.toLocaleString()}` : '';
-                    content += `<div style='border:1px solid #e3cfe0;border-radius:10px;padding:16px;background:#faf8fb;'>
+                    content += `<div style='border:1px solid #E8F3F8;border-radius:10px;padding:16px;background:#F9FBFD;'>
                         <div style='display:flex;justify-content:space-between;align-items:center;'>
-                            <div><strong style='color:#5a2032'>${inv.id || 'Factura'}</strong></div>
-                            <div style='color:#d946a6;font-weight:700'>${total}</div>
+                            <div><strong style='color:#2D4A9C'>${inv.id || 'Factura'}</strong></div>
+                            <div style='color:#C7499F;font-weight:700'>${total}</div>
                         </div>
                         <div style='color:#666;font-size:0.95rem;margin:6px 0 0 0;'>${date}</div>
                         <div style='margin-top:10px;'>
